openshift-demos/octopus-argocd-aro-integration/examples/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-aro
  labels:
    app: hello-aro
spec:
  selector:
    app: hello-aro
  ports:
    - name: http
      port: 8080
      targetPort: 8080
