openshift-demos/octopus-argocd-aro-integration/examples/manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-aro
  labels:
    app: hello-aro
spec:
  to:
    kind: Service
    name: hello-aro
  port:
    targetPort: http
  tls:
    termination: edge
